[package]
name = "myslowlog"
version = "0.2.0"
authors = ["ulrichsg"]
homepage = "https://github.com/ulrichsg/myslowlog"
edition = "2021"
license = "MIT"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true

[dependencies]
ahash = "0.8.3"
clap = { version = "4.4.6", features = ["derive"] }
once_cell = "1.18.0"
rayon = "1.8.0"
regex = { version = "1.9.6", features = ["std"] }
sqlparser = {git = "https://github.com/ulrichsg/sqlparser-rs", branch = "mysql-delete-order-limit"}
time = { version = "0.3.29", features = ["formatting", "parsing"] }

[dev-dependencies]
indoc = "2.0.4"