[package]
name = "myslowlog"
version = "0.2.0"
authors = ["ulrichsg"]
homepage = "https://github.com/ulrichsg/myslowlog"
edition = "2021"
license = "MIT"

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = false
debug = true

[dependencies]
ahash = "0.8.12"
clap = { version = "4.5.47", features = ["derive"] }
once_cell = "1.21.3"
rayon = "1.11.0"
regex = { version = "1.11.2", features = ["std"] }
sqlparser = { version = "0.58.0"}
time = { version = "0.3.43", features = ["formatting", "parsing"] }

[dev-dependencies]
indoc = "2.0.6"